# Route-Daemon

./: .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json
.kilo/plans/: router-daemon-roadmap.md
config/: route-daemon.example.json
include/: config.h  daemon.h  dhcp_cl.h  dhcp_sv.h  firewall.h  health.h  interface.h  log.h  shaper.h  wifi_ap.h
src/: config.c  daemon.c  dhcp_cl.c  dhcp_sv.c  firewall.c  health.c  interface.c  log.c  main.c  shaper.c  wifi_ap.c
tests/: CMakeLists.txt  test_config.c  test_log.c
